--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.4.5",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "supertest": "^6.2.3"
   },
   "pre-commit": [
     "lint"
@@ -50,7 +51,7 @@
     ],
     "coverageThreshold": {
       "global": {
-        "lines": 50
+        "lines": 90
       }
     }
   },
@@ -58,6 +59,7 @@
     "body-parser": "^1.20.0",
     "consign": "^0.1.6",
     "express": "^4.17.3",
+    "moment": "^2.29.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "node-fetch": "^2.6.7",
